# camera_wrapper_mplugin

./: .travis.yml  CMakeLists.txt  Doxyfile.in  mico-camera_wrapper-config.cmake.in
cmake/templates/: mico-cameras-wrapper-config.cmake.in
include/mico/camera_wrapper/: StereoCamera.h  StereoCamera.inl
include/mico/camera_wrapper/StereoCameras/: ParallelFeatureMatcher.h  StereoCameraCustom.h  StereoCameraKinect.h  StereoCameraKinect.inl  StereoCameraRealSense.h  StereoCameraRealSense.inl  StereoCameraRos.h  StereoCameraRos.inl  StereoCameraRosBag.h  StereoCameraRosBag.inl  StereoCameraVirtual.h  StereoCameraVirtual.inl  StereoCameraZED.h
include/mico/camera_wrapper/flow/: StreamDataset.h  StreamKinect.h  StreamRealSense.h  StreamWebcam.h
include/mico/cameras/: StereoCamera.h  TrackingCamera.h
include/mico/cameras/flow/: StreamDataset.h  StreamKinect.h  StreamRealSense.h  StreamRealSenseTracking.h  StreamWebcam.h
include/mico/cameras_wrapper/: StereoCamera.h  StereoCamera.inl  TrackingCamera.h
include/mico/cameras_wrapper/StereoCameras/: StereoCameraCustom.h  StereoCameraKinect.h  StereoCameraRealSense.h  StereoCameraRos.h  StereoCameraRosBag.h  StereoCameraVirtual.h  StereoCameraZED.h
include/mico/cameras_wrapper/flow/: StreamDataset.h  StreamKinect.h  StreamRealSense.h  StreamRealSenseTracking.h  StreamWebcam.h
old_src/include/mico/cameras/flow/: StreamDataset.h  StreamKinect.h  StreamRealSense.h  StreamRealSenseTracking.h  StreamWebcam.h
old_src/src/cameras/flow/: StreamDataset.cpp  StreamKinect.cpp  StreamRealSense.cpp  StreamRealSenseTracking.cpp
scripts/: install_dependencies_ci.sh
src/camera_wrapper/: StereoCamera.cpp  TrackingCamera.cpp  flow_factory.cpp  flow_interface.cpp
src/camera_wrapper/StereoCameras/: ParallelFeatureMatcher.cpp  StereoCameraCustom.cpp  StereoCameraKinect.cpp  StereoCameraRealSense.cpp  StereoCameraRos.cpp  StereoCameraRosBag.cpp  StereoCameraVirtual.cpp  StereoCameraZED.cpp
src/camera_wrapper/cjson/: json.cpp  parser.cpp  serializer.cpp
src/camera_wrapper/flow/: StreamDataset.cpp  StreamKinect.cpp  StreamRealSense.cpp  StreamRealSenseTracking.cpp  StreamWebcam.cpp
src/cameras/: TrackingCamera.cpp  flow_factory.cpp
src/cameras/flow/: StreamDataset.cpp  StreamKinect.cpp  StreamRealSense.cpp  StreamRealSenseTracking.cpp  StreamWebcam.cpp
